update office hours

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ vars:
     course_site_alt: http://cs.nyu.edu/~jversoza
 
     # office hours
-    office_hours: "<br>&nbsp;9:30AM - 10:30AM on Mondays, Tuesdays, and Wednesdays at WWH"
+    office_hours: "9:25AM - 10:55AM on Mondays and Tuesdays""
     office_hours_room: WWH 422 
 
     # finals
