modify office hours

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ vars:
   course_site_alt: http://cs.nyu.edu/~jversoza
 
   # office hours
-  office_hours: "9:25AM - 10:55AM on Mondays and Tuesdays"
+  office_hours: "9:25AM - 10:55AM, Monday and Tuesday"
   office_hours_room: WWH 422 
 
   # finals
