--- a/_config.yml
+++ b/_config.yml
@@ -92,5 +92,6 @@ vars:
   node_version: 9.x.x or 10.x.x
 
   slides_img_prefix: "../../resources/img"
+  github_org: "https://github.com/nyu-csci-ua-0480-001-003-fall-2018"
 
 
