--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "q": ""
   },
   "dependencies": {
-    "express": "^4.16.3",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "npm": "^6.4.0"
   }
