--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "mongoose": "^5.3.4",
     "npm": "^6.4.0"
   }
 }
