--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Course site for csci-ua.0480, Applied Internet Technology",
   "author": "Joe Versoza",
   "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "grunt": "",
     "grunt-contrib-concat": "",
     "grunt-contrib-connect": "",
